switch to data rest and h2 database and remove redundant controller and service

--- a/P02-VehiclesAPI/pricing-service/src/main/resources/application.properties
+++ b/P02-VehiclesAPI/pricing-service/src/main/resources/application.properties
@@ -2,3 +2,8 @@ server.port=8082
 
 #Eureka
 spring.application.name=pricing-service
+
+# H2
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2
+spring.datasource.url=jdbc:h2:mem:prices
