connect vehicles api service to eureka and use it to obtain uri of maps and pricing services

--- a/P02-VehiclesAPI/vehicles-api/src/main/resources/application.properties
+++ b/P02-VehiclesAPI/vehicles-api/src/main/resources/application.properties
@@ -1,2 +1,5 @@
-pricing.endpoint=http://localhost:8082
-maps.endpoint=http://localhost:9191
+pricing.serviceId=pricing-service
+maps.serviceId=boogle-maps
+
+#Eureka
+spring.application.name=vehicles-api
